--- a/style.css
+++ b/style.css
@@ -34,20 +34,27 @@ body {
 
 #moves, #time{
     float: left;
-    color: #FFF;
-    margin-left: 2vw;
-    width: 33vw;
+    color: #FFF;       
+}
+
+#moves {
+    width: 30vw;
+    margin-left: 2vw; 
+}
+
+#time {
+    width: 15vw;
 }
 
 #buttons{
-    width: 29vw;
+    width: 45vw;
     float: right;
     text-align: right;
 }
 button{
     border: 0px;
     border-radius: 1em;                
-    margin: 0vh 1vh 0vh 0vh;
+    margin: 0vh 0.5vh 0vh 0vh;
     padding: 0.5vh 2vh 0.5vh 2vh;                
     background: #FFF;                                            
     height: 6.5vh;
@@ -64,8 +71,7 @@ canvas{
 }
 
 #modal {
-    display: flex;    
-    
+    display: flex;        
     position: absolute;
     top: 0;
     left: 0;
