--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     width: 100%;
     background-color: #A0CAB5;                               
 }
+
 #container{
     width: 100%;
     height: 100%;
@@ -14,62 +15,62 @@ body {
     align-items: center; 
     justify-content: center;
 }            
+
+canvas{                
+    margin-top: 2em;
+}
+
+/* TOPBAR */
 #topbar{
     position: absolute;
-    width: 100%;       
-    height: 8vh;     
-    line-height: 8vh;
+    width: 100%;              
+    line-height: 1.5em;
     top: 0;                
     width: 100%;                
-    background: black;  
+    background: #576E62;  
     font-family: sans-serif;
     font-weight: bold;                
-    font-size: 4vh;             
-    
+    font-size: 1.2em;                 
+    box-shadow: 0vh 0vh 0.5vh rgba(0, 0, 0, 0.35);
+    color: #FFF;
 }
 
-#topbar>div{
-    display: inline;                
-}
-
-#moves, #time{
+#moves{
     float: left;
     color: #FFF;       
-}
-
-#moves {
-    width: 30vw;
-    margin-left: 2vw; 
+    width: 10em;
+    margin-left: 0.5em; 
 }
 
 #time {
-    width: 15vw;
+    float: right;
+    width: 5em;    
+    text-align: right;
+    margin-right: 0.5em; 
 }
 
-#buttons{
-    width: 45vw;
-    float: right;
-    text-align: right;
+#topbar>.buttons{                   
+    text-align: center;
 }
-button{
+
+#topbar>.buttons>button{
     border: 0px;
-    border-radius: 1em;                
-    margin: 0vh 0.5vh 0vh 0vh;
-    padding: 0.5vh 2vh 0.5vh 2vh;                
-    background: #FFF;                                            
-    height: 6.5vh;
+    border-radius: 0.5em;                    
+    margin: 0px;
+    padding: 0 1em 0 1em;
+    background: #FFF;                                                
     font-family: sans-serif;
     font-weight: bold;
-    text-transform: uppercase;
-    font-size: 3vh;                
-}
-button:hover{
-    background: #BDAEC6;
-}
-canvas{                
-    margin-top: 8vh;
+    height: 2em;
+    line-height: 1em;
+    vertical-align: middle;
 }
 
+#topabr button:hover{
+    background: #BDAEC6;
+}
+
+/* MODAL */
 #modal {
     display: flex;        
     position: absolute;
@@ -126,14 +127,50 @@ canvas{
     cursor: pointer;
 }
 
-.modalVisible {    
+/* FADE IN/OUT ANIMATION */
+.animatedVisible {    
     visibility: visible;
     opacity: 1;
     transition: opacity 0.2s linear;
 }
   
-.modalHidden {
+.animatedHidden {
     visibility: hidden;    
     opacity: 0;
     transition: visibility 0.2s, opacity 0.2s linear;
 }
+
+/* LOADER */
+#loader{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -5em;
+    margin-top: -5em;
+    opacity: 0.5;
+}
+.lds-dual-ring {
+    display: inline-block;
+    width: 10em;
+    height: 10em;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 8em;
+    height: 8em;
+    margin: 0px;
+    border-radius: 50%;
+    border: 1em solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+  
