--- a/css/index.css
+++ b/css/index.css
@@ -42,9 +42,16 @@ canvas{
     margin-left: 0.5em; 
 }
 
+#version{
+    float:right;
+    font-weight: lighter;
+    font-size: 0.5em;
+    width: 1em;
+}
+
 #time {
     float: right;
-    width: 5em;    
+    width: 6em;    
     text-align: right;
     margin-right: 0.5em; 
 }
