--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@ body {
     padding: 0;
     overflow: hidden;
     height: 100%;
-    width: 100%;
-    background-color: #A0CAB5;                               
+    width: 100%;    
+    background-image: url(../img/fabric2.png);
 }
 
 #container{
@@ -38,7 +38,7 @@ canvas{
     line-height: 1.5em;
     top: 0;                
     width: 100%;                
-    background: #576E62;  
+    background: #1e3b1f;  
     font-family: sans-serif;
     font-weight: bold;                
     font-size: 1.1em;                 
@@ -174,13 +174,14 @@ canvas{
 #combo{
     position: fixed;
     top: 10vh;
-    right: 0.5em;    
+    right: 0.7em;    
     width: 7em;
     height: 1.7em;
     background: #576E62;
     border-radius: 0.5em;
     box-shadow: -0.1em -0.1em 0.2em rgba(0, 0, 0, 0.25);    
     padding: 0.2em;
+    opacity: 0.75;
 }
 
 #comboBar{
@@ -195,7 +196,23 @@ canvas{
     font-family: sans-serif;
     font-weight: bold;
     width: 100%;
-    margin-top: -1.3em;
+    margin-top: -1.3em;    
     text-align: center;
     text-transform: uppercase;
 }
+
+.animatedZoomInOut{
+    animation: zoom-in-zoom-out 500ms;
+}
+
+@keyframes zoom-in-zoom-out {
+    0% {
+      transform: scale(1, 1);
+    }
+    50% {
+      transform: scale(1.2, 1.2);
+    }
+    100% {
+      transform: scale(1, 1);
+    }
+  }
